# JiPP2

./: CMakeLists.txt
Classes/: CMakeLists.txt
Classes/include/: Figura.h  FunkcjaKwadratowa.h  Kolo.h  Prostopadloscian.h  Punkt.h  Student.h
Classes/src/: Figura.cpp  FunkcjaKwadratowa.cpp  Kolo.cpp  Prostopadloscian.cpp  Punkt.cpp  Student.cpp  main.cpp
FinalProject/: CMakeLists.txt
FinalProject/include/: Employee.h  MainFunctions.h  Manager.h  Worker.h  WorkersManager.h  main.h
FinalProject/src/: Employee.cpp  MainFunctions.cpp  Manager.cpp  Worker.cpp  WorkersManager.cpp  main.cpp
allocation_basics/: main.cpp
firstLib/: CMakeLists.txt
firstLib/Lib/: CMakeLists.txt
firstLib/Lib/src/: lib.cpp
firstLib/firstLibCall/: CMakeLists.txt  main.cpp
lab12/matrixTest/: CMakeLists.txt
lab12/withoutExtern/: CMakeLists.txt
lab12/withoutExtern/src/: functions.h  main.cpp
lab5/Examples/include/: Point.h
lab5/Examples/src/: Point.cpp
lab5/Pojazd/include/: Pojazd.h
lab5/Pojazd/src/: Pojazd.cpp
lab6/Wektory/: CMakeLists.txt
lab6/Wektory/include/: Node.h  Vector.h
lab6/Wektory/src/: Node.cpp  Vector.cpp  main.cpp
lab7/Dziedziczenie/: CMakeLists.txt
lab7/Dziedziczenie/include/: Circle.h  Figure.h  Square.h  Triangle.h
lab7/Dziedziczenie/src/: Circle.cpp  Figure.cpp  Square.cpp  (+2 more)
lab7/Polimorfizm/: CMakeLists.txt
matrixCalc/: CMakeLists.txt
matrixCalc/App/: CMakeLists.txt  main.cpp
matrixCalc/Lib/: CMakeLists.txt
matrixCalc/matrixApp/: CMakeLists.txt  main.cpp
matrixCalc/matrixLib/: CMakeLists.txt
simpleCalc/: CMakeLists.txt  main.cpp
(+11 files in other folders)
